[package]
name = "asciigraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.25.0"
strum = "0.25.0"
time = "0.3.30"
strum_macros = "0.25.3"
vector2d = "2.2.0"
